# car-rental-reservations

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  QUICK_START_UV.md  README.md  TODO.md  UV_MIGRATION.md  install_uv.ps1  install_uv.sh  pyproject.toml  requirements.txt  test_setup.py  tmpclaude-ec73-cwd
src/application/dto/: availability_dto.py  mappers.py  payment_dto.py  reservation_dto.py
src/application/ports/: event_bus.py  payment_gateway.py  receipt_generator.py  repositories.py  supplier_gateway.py  unit_of_work.py
src/application/use_cases/availability/: search_availability.py
src/application/use_cases/reservations/: create_reservation.py  get_reservation.py  list_reservations.py
src/config/: settings.py
src/domain/entities/: contact.py  driver.py  payment.py  pricing_item.py  pyment.py  reservation.py
src/domain/events/: reservation_confirmed.py  reservation_created.py
src/domain/exceptions/: payment_errors.py  reservation_errors.py  supplier_errors.py
src/domain/services/: pricing_calculator.py  reservation_code_generator.py  state_machine.py
src/domain/value_objects/: reservation_status.py
src/infrastructure/documents/: receipt_generator.py
src/infrastructure/documents/templates/: receipt.html
src/infrastructure/idempotency/: idempotency_store.py
src/infrastructure/persistence/: database.py  models.py  unit_of_work.py
src/infrastructure/persistence/repositories/: customer_repo.py  office_repo.py  outbox_repo.py  payment_repo.py  reservation_repo.py  supplier_repo.py  supplier_request_repo.py
src/presentation/: __init__.py  main.py
src/presentation/api/v1/: __init__.py  availability.py  health.py  reservations.py
src/presentation/middleware/: error_handler.py
src/presentation/schemas/: availability_schemas.py  reservation_schemas.py
tests/unit/config/: __init__.py  test_settings.py
tests/unit/domain/: __init__.py  test_domain_events.py  test_driver_entity.py  test_payment_entity.py  test_pricing_calculator.py  test_reservation_entity.py  test_value_objects.py
tests/unit/infrastructure/: __init__.py  test_database.py
