[tool.poetry]
name = "car-rental-reservations"
version = "0.1.0"
description = "Global car rental reservation system - High concurrency FastAPI application"
authors = ["Rafael <rafael@mexicocarrental.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiomysql = "^0.2.0"
alembic = "^1.14.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
httpx = "^0.28.0"
stripe = "^11.3.0"
structlog = "^24.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dateutil = "^2.9.0"
ulid-py = "^1.1.0"
weasyprint = "^62.3"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
faker = "^33.1.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
ipython = "^8.30.0"

[tool.poetry.scripts]
dev = "uvicorn src.presentation.main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest tests/ -v --cov=src"
worker-outbox = "python -m src.workers.outbox_processor"
worker-cleanup = "python -m src.workers.cleanup_worker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]